# ai-depth-plugin

./: CMakeLists.txt  Plugin.cpp  Plugin.h  README.md  generate_pdf.py
.github/workflows/: build.yml
